<resources>
    <string name="app_name">Admin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password2">Password</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="description">Description</string>
    <string name="update_or_delete">Update or Delete</string>
    <string name="insert">Insert</string>
    <string name="orders">Orders</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="admin_panel">Admin Panel</string>
    <string name="theme">Theme</string>
    <string name="main_menu">Main menu</string>
    <string name="darc_mode">Dark mode</string>
    <string name="light_mode">Light mode</string>
    <string name="admin_settings">Admin settings</string>
    <string name="username">Username</string>
    <string name="change">Change</string>
    <string name="add_new_admin">Add new admin</string>
    <string name="password">Password</string>
    <string name="add">Add</string>
</resources>