<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_ordersFragment"
            android:icon="@drawable/ic_order_food"
            android:title="@string/orders" />
        <item
            android:id="@+id/nav_homeFragment"
            android:icon="@drawable/ic_insert"
            android:title="@string/insert" />

        <item
            android:id="@+id/nav_updateFragment"
            android:icon="@drawable/ic_edit"
            android:title="@string/update" />

        <item
            android:id="@+id/nav_deleteFragment"
            android:icon="@drawable/ic_delete"
            android:title="@string/delete" />

        <item
            android:id="@+id/nav_mainFragment"
            android:icon="@drawable/ic_main_section"
            android:title="@string/main_menu" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="Settings" />


    </group>
</menu>